# cookie-use

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install-app.sh  install.sh
.github/workflows/: ci.yml  release-binaries.yml
app/: build-dmg.sh  project.yml
app/CookieUse.xcodeproj/: project.pbxproj
app/CookieUse/App/: Info.plist  main.swift
app/CookieUse/Core/: CLIBridge.swift  Models.swift
app/CookieUse/UI/: AppModel.swift  CaptureSheet.swift  DesignSystem.swift  ImportSheet.swift  ManagementView.swift  MenuBarView.swift  RedeemSheet.swift  ShareSheet.swift
docs/: macos-gui-contract.md
skills/cookie-use/: SKILL.md
src/: act_as.rs  chrome_use.rs  confirm.rs  crypto.rs  fingerprint.rs  gogs_pr.rs  keychain.rs  main.rs  runner.rs  share.rs  vault.rs
tests/: cli.rs
